# Mirai

./: README.md  pyproject.toml
mirai/: cli.py  test.py
mirai/core/: api.py  chatbot.py
mirai/core/memories/: memory.py
mirai/core/memories/.lancedb/chat_history.lance/_transactions/: 0-ac4eacf7-9397-4508-a478-26ed8c5ec31a.txn  1-f09ab220-5c2f-40ca-9a71-442de7918cfe.txn  10-124fa5c8-3e43-40c9-a0d2-18c6b4484f87.txn  11-1ee16b20-a415-47e9-8b01-49f0642a6553.txn  12-36500868-b282-4bd1-9a1c-f27d44767182.txn  13-90607c1e-4ca3-4c5d-9e7e-d0917a4f0f28.txn  14-e95b7880-bc64-4a40-a1e2-acd300fb4f12.txn  15-a4e5328e-b1e7-4aa9-ad53-152ff391b5b3.txn  16-0704be63-358a-4dd6-8a87-615fd883a627.txn  17-2fccd9a6-1314-43b8-a0d5-140bedd6920f.txn  18-647b0b89-0ab1-460e-8e2c-5c2442bdf0ea.txn  19-7b82c68f-10b0-42a2-b9da-71bb04c56143.txn  2-8c503545-dbda-48ae-8df4-ca64832c7af3.txn  20-538af40d-18b3-4c25-9f15-392ff08b5771.txn  21-75ae5991-8e3e-4cfd-a06b-f508fb35381e.txn  22-da0510bb-0a25-45b8-a334-5de16a289e48.txn  23-07316478-3ae9-417f-9ea5-d0c0cd0b8e13.txn  24-3d46b251-2858-40c1-886e-ff18f2b4d2dc.txn  25-acaea10a-8875-4bef-9e8d-5ba5652194c6.txn  26-79d14308-a72d-4b22-bc78-455d1d4d9554.txn  27-6853ff14-8940-426a-af33-0063e8000653.txn  (+29 more)
mirai/core/utils/: assets_check.py
mirai/edge/: client.py
mirai/edge/template/: README.md  env.template
mirai/edge/template/mirai_tools/: __init__.py  example_tool.py
mirai/tools/: web_tools.py
mirai/ui/: app.py
mirai/utils/: chat.py  prompts.py  tool.py
mirai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
